--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-<!--     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script> -->
-    "Hello World"
+     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
   </head>
   <body>
-<!--     <a-scene>
+    <a-scene>
       <a-sky src="R0011479_20240123183214.JPG" rotation="0 -90 0"></a-sky>
-    </a-scene> -->
-    <img src="R0011479_20240123183214.JPG" alt="360 image of a riad in Marrakesh"></img>
+    </a-scene>
+<!--     <img src="R0011479_20240123183214.JPG" alt="360 image of a riad in Marrakesh"></img> -->
   </body>
 </html>
