--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html class=""a-fullscreen">
   <head>
-    <title>HTML over a-frame</title>
-     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <title>deadLINE</title>
+    <!-- <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>-->
+    <link rel="stylesheet" href="360style.css">
   </head>
   <body>
     <div id="three60">
-        <a-scene>
+        <!--<a-scene>
             <a-sky src="R0011479_20240123183214.JPG" rotation="0 -90 0"></a-sky>
-        </a-scene>     
+        </a-scene>-->
     </div>
-    <div id="menu" style="position: fixed; top: 0; left:0; right: 0; background: rgba(30, 30, 30, 0.75); padding: 10px">
+    <!--<div id="menu" style="position: fixed; top: 0; left:0; right: 0; background: rgba(30, 30, 30, 0.2); padding: 10px">-->
+    <div id=""menu">        
         <h1>Scroll Down</h1>
         <p>Scroll down to see the sticky effect.</p>
     </div>
   </body>
+  <footer>
+    <div>
+        <h1>West  North West  North  North East  East  South East  South  South West  Up  Down  Action</h1>
+    </div>
+  </footer>
 </html>
