--- a/index.html
+++ b/index.html
@@ -6,20 +6,40 @@
     <link rel="stylesheet" href="360style.css">
   </head>
   <body>
-    <div id="three60">
-        <!--<a-scene>
-            <a-sky src="R0011479_20240123183214.JPG" rotation="0 -90 0"></a-sky>
-        </a-scene>-->
-    </div>
-    <!--<div id="menu" style="position: fixed; top: 0; left:0; right: 0; background: rgba(30, 30, 30, 0.2); padding: 10px">-->
-    <div id=""menu">        
-        <h1>Scroll Down</h1>
-        <p>Scroll down to see the sticky effect.</p>
+    <div class="flexb">
+        <div class="content">
+            <div id="three60">
+                <a-scene>
+                    <a-sky src="R0011479_20240123183214.JPG" rotation="0 -90 0"></a-sky>
+                </a-scene>
+            </div>
+            <!--<div id="menu" style="position: fixed; top: 0; left:0; right: 0; background: rgba(30, 30, 30, 0.2); padding: 10px">-->
+            <div id="menu">        
+                <h1>Scroll Down</h1>
+                <p>Scroll down to see the sticky effect.</p>
+            </div>
+        </div>
     </div>
   </body>
   <footer>
-    <div>
-        <h1>West  North West  North  North East  East  South East  South  South West  Up  Down  Action</h1>
-    </div>
+    <div class="base">
+        <div>
+            <h1>LEFT AREA</h1>
+        </div>
+        <div class="grid-compass">
+            <div class="nav1">NW</div>
+            <div class="nav2">N</div>
+            <div class="nav3">NE</div> 
+            <div class="nav4">W</div>
+            <div class="nav5">A</div>
+            <div class="nav6">E</div>
+            <div class="nav7">SW</div>
+            <div class="nav8">S</div> 
+            <div class="nav9">SE</div>
+        </div>
+        <div>
+            <h1>INV AREA</h1>
+        </div>
+    </base>
   </footer>
 </html>
