--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class=""a-fullscreen">
   <head>
     <title>deadLINE</title>
-    <!-- <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>-->
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <link rel="stylesheet" href="360style.css">
   </head>
   <body>
