--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="360style.css">
   </head>
   <body>
-    <div id="three60">
+    <div class="three60">
         <a-scene>
             <a-sky src="R0011479_20240123183214.JPG" rotation="0 -90 0"></a-sky>
 
