--- a/index.html
+++ b/index.html
@@ -6,18 +6,15 @@
     <link rel="stylesheet" href="360style.css">
   </head>
   <body>
-    <div class="three60">
-        <a-scene>
-            <a-sky src="R0011479_20240123183214.JPG" rotation="0 -90 0"></a-sky>
+    <a-scene>
+        <a-sky src="R0011479_20240123183214.JPG" rotation="0 -90 0"></a-sky>
 
-            <div class="flexb">
-                <div class="content">
-                    <!--<div id="menu" style="position: fixed; top: 0; left:0; right: 0; background: rgba(30, 30, 30, 0.2); padding: 10px">-->
-                    <div id="menu">        
-                        <h1>Scroll Down</h1>
-                        <p>Scroll down to see the sticky effect.</p>
-                    </div>
-                </div>
+        <div class="flexb">
+            <div class="menu">        
+                <h1>Hamburger</h1>
+            </div>
+            <div class="content">
+                <!--<div id="menu" style="position: fixed; top: 0; left:0; right: 0; background: rgba(30, 30, 30, 0.2); padding: 10px">-->
             </div>
             <div class="base">
                 <div>
@@ -37,8 +34,8 @@
                 <div>
                     <h1>INV AREA</h1>
                 </div>
-            </base> 
-        </a-scene>
-    </div>       
+            </base>
+        </div> 
+    </a-scene>      
   </body>
 </html>
