--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
             </div>
             <div class="base">
                 <div>
-                    <h1>LEFT AREA</h1>
+                    <!--this space intentionally left blank-->
                 </div>
                 <div class="grid-compass">
-                    <div class="nav1">NW</div>
-                    <div class="nav2">N</div>
-                    <div class="nav3">NE</div> 
-                    <div class="nav4">W</div>
-                    <div class="nav5">A</div>
-                    <div class="nav6">E</div>
-                    <div class="nav7">SW</div>
-                    <div class="nav8">S</div> 
-                    <div class="nav9">SE</div>
+                    <div class="nav_nw">NW</div>
+                    <div class="nav_n">N</div>
+                    <div class="nav_ne">NE</div> 
+                    <div class="nav_w">W</div>
+                    <div class="nav_a">A</div>
+                    <div class="nav_e">E</div>
+                    <div class="nav_sw">SW</div>
+                    <div class="nav_s">S</div> 
+                    <div class="nav_se">SE</div>
                 </div>
                 <div>
                     <h1>INV AREA</h1>
