--- a/index.html
+++ b/index.html
@@ -6,36 +6,38 @@
     <link rel="stylesheet" href="360style.css">
   </head>
   <body>
-    <a-scene>
-        <a-sky src="R0011479_20240123183214.JPG" rotation="0 -90 0"></a-sky>
+    <three60>
+        <a-scene>
+            <a-sky src="R0011479_20240123183214.JPG" rotation="0 -90 0"></a-sky>
 
-        <div class="flexb">
-            <div class="menu">        
-                <h1>Hamburger</h1>
-            </div>
-            <div class="content">
-                <!--<div id="menu" style="position: fixed; top: 0; left:0; right: 0; background: rgba(30, 30, 30, 0.2); padding: 10px">-->
-            </div>
-            <div class="base">
-                <div>
-                    <!--this space intentionally left blank-->
+            <div class="flexb">
+                <div class="menu">        
+                    <h1>Hamburger</h1>
                 </div>
-                <div class="grid-compass">
-                    <div class="nav_nw">NW</div>
-                    <div class="nav_n">N</div>
-                    <div class="nav_ne">NE</div> 
-                    <div class="nav_w">W</div>
-                    <div class="nav_a">A</div>
-                    <div class="nav_e">E</div>
-                    <div class="nav_sw">SW</div>
-                    <div class="nav_s">S</div> 
-                    <div class="nav_se">SE</div>
+                <div class="content">
+                    <!--<div id="menu" style="position: fixed; top: 0; left:0; right: 0; background: rgba(30, 30, 30, 0.2); padding: 10px">-->
                 </div>
-                <div>
-                    <h1>INV AREA</h1>
-                </div>
-            </base>
-        </div> 
-    </a-scene>      
+                <div class="base">
+                    <div>
+                        <!--this space intentionally left blank-->
+                    </div>
+                    <div class="grid-compass">
+                        <div class="nav_nw">NW</div>
+                        <div class="nav_n">N</div>
+                        <div class="nav_ne">NE</div> 
+                        <div class="nav_w">W</div>
+                        <div class="nav_a">A</div>
+                        <div class="nav_e">E</div>
+                        <div class="nav_sw">SW</div>
+                        <div class="nav_s">S</div> 
+                        <div class="nav_se">SE</div>
+                    </div>
+                    <div>
+                        <h1>INV AREA</h1>
+                    </div>
+                </base>
+            </div> 
+        </a-scene>
+    </three60>      
   </body>
 </html>
