--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <three60>
         <a-scene>
-            <a-sky src="R0011479_20240123183214.JPG" rotation="0 -90 0"></a-sky>
+            <a-sky src="/images/R0011479_20240123183214.JPG" rotation="0 -90 0"></a-sky>
 
             <div class="flexb">
                 <div class="menu">        
@@ -18,8 +18,8 @@
                     <!--<div id="menu" style="position: fixed; top: 0; left:0; right: 0; background: rgba(30, 30, 30, 0.2); padding: 10px">-->
                 </div>
                 <div class="base">
-                    <div>
-                        <!--this space intentionally left blank-->
+                    <div id="blank">
+                        <!--this space intentionally left blank ;)-->
                     </div>
                     <div class="grid-compass">
                         <div class="nav_nw">NW</div>
@@ -32,7 +32,7 @@
                         <div class="nav_s">S</div> 
                         <div class="nav_se">SE</div>
                     </div>
-                    <div>
+                    <div id="inv">
                         <h1>INV AREA</h1>
                     </div>
                 </base>
