--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <three60>
         <a-scene>
-            <a-sky src="/images/R0011479_20240123183214.JPG" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/R0011479_20240123183214.JPG" rotation="0 -90 0"></a-sky>
 
             <div class="flexb">
                 <div class="menu">        
