--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class=""a-fullscreen">
+<html class="a-fullscreen">
   <head>
     <title>deadLINE</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
@@ -12,7 +12,7 @@
 
             <div class="flexb">
                 <div class="menu">        
-                    <h1>Hamburger</h1>
+                    <h3>Hamburger</h3>
                 </div>
                 <div class="content">
                     <!--<div id="menu" style="position: fixed; top: 0; left:0; right: 0; background: rgba(30, 30, 30, 0.2); padding: 10px">-->
