--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>deadLINE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<link rel="stylesheet" href="360style.css">-->
+    <link rel="prefetch" href="(awake.html)">
     <style>
         body, html{
             height: 100%;
