--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>deadLINE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="prefetch" href="(awake.html)">
+    <link rel="prefetch" href="(./images/R0011479_20240123183214.JPG)">
     <style>
         body, html{
             height: 100%;
