--- a/awake.html
+++ b/awake.html
@@ -3,6 +3,7 @@
   <head>
     <title>deadLINE</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <a-scene vr-mode-ui="enabled: false"></a-scene>
     <link rel="stylesheet" href="360style.css">
   </head>
   <body>
