--- a/awake.html
+++ b/awake.html
@@ -3,12 +3,11 @@
   <head>
     <title>deadLINE</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    <a-scene vr-mode-ui="enabled: false"></a-scene>
     <link rel="stylesheet" href="360style.css">
   </head>
   <body>
     <three60>
-        <a-scene>
+        <a-scene vr-mode-ui="enabled: false">
             <a-sky src="./images/R0011479_20240123183214.JPG" rotation="0 -90 0"></a-sky>
 
             <div class="flexb">
