--- a/awake.html
+++ b/awake.html
@@ -26,14 +26,14 @@
                     </div>
                     <div class="grid-compass">
                         <button class="nav_nw" type="submit">NW</button>
-                        <div class="nav_n">N</div>
-                        <div class="nav_ne">NE</div> 
-                        <div class="nav_w">W</div>
-                        <div class="nav_a">A</div>
-                        <div class="nav_e">E</div>
-                        <div class="nav_sw">SW</div>
-                        <div class="nav_s">S</div> 
-                        <div class="nav_se">SE</div>
+                        <button class="nav_n" type="submit">N</button>
+                        <button class="nav_ne" type="submit">NE</button>
+                        <button class="nav_w" type="submit">W</button>
+                        <button class="nav_a" type="submit">A</button>
+                        <button class="nav_e" type="submit">E</button>
+                        <button class="nav_sw" type="submit">SW</button>
+                        <button class="nav_s" type="submit">S</button> 
+                        <button class="nav_se" type="submit">SE</button>
                     </div>
                     <div id="inv">
                         <h1>INV AREA</h1>
