added descriptive as class

--- a/awake.html
+++ b/awake.html
@@ -17,7 +17,7 @@
                 <div class="content">
                     <!--<div id="menu" style="position: fixed; top: 0; left:0; right: 0; background: rgba(30, 30, 30, 0.2); padding: 10px">-->
                 </div>
-                <div id="descriptive">
+                <div class="descriptive">
                     <h4>Description of the scene goes in here.  This should give links to possible options and information about what can be seen and hints as to how to interact with the environment.</h4>
                 </div>
                 <div class="base">
@@ -38,7 +38,7 @@
                     <div id="inv">
                         <h1>INV AREA</h1>
                     </div>
-                </base>
+                </div>    
             </div> 
         </a-scene>
     </three60>      
