Grid changes for compass and inv

--- a/awake.html
+++ b/awake.html
@@ -21,23 +21,52 @@
                     <h4>Description of the scene goes in here.  This should give links to possible options and information about what can be seen and hints as to how to interact with the environment.</h4>
                 </div>
                 <div class="base">
-                    <div id="blank">
+                    <!--<div id="blank">-->
                         <!--this space intentionally left blank ;)-->
-                    </div>
+                    <!--</div>-->
                     <div class="grid-compass">
+                        <!--First row-->
+                        <div class="gblank"></div> <!--1-->
                         <button class="nav_nw" type="submit">NW</button>
                         <button class="nav_n" type="submit">N</button>
                         <button class="nav_ne" type="submit">NE</button>
+                        <div class="gblank"></div> <!--5-->
+                        <div class="invtitle">Inventory</div> <!--6-8-->
+                        <div class="gblank"></div> <!--9-->
+                        <!--Second row-->
+                        <div class="gblank"></div>
                         <button class="nav_w" type="submit">W</button>
-                        <button class="nav_a" type="submit">A</button>
+                        <button class="nav_l" type="submit">L</button>
                         <button class="nav_e" type="submit">E</button>
+                        <div class="gblank"></div>
+                        <div class="invblank"></div> <!--6-8-->
+                        <div class="gblank"></div>
+                        <!--Third row-->
+                        <div class="gblank"></div>
                         <button class="nav_sw" type="submit">SW</button>
                         <button class="nav_s" type="submit">S</button> 
                         <button class="nav_se" type="submit">SE</button>
+                        <div class="gblank"></div>
+                        <div class="slot1">Inv 1</div>
+                        <div class="gblank"></div>
+                        <!--Forth row-->
+                        <div class="gblank"></div>
+                        <div class="compassblank"></div> <!--2-4-->
+                        <div class="gblank"></div>
+                        <div class="slot2">Inv 2</div>
+                        <div class="gblank"></div>
+                        <!--Fifth row-->
+                        <div class="gblank"></div>
+                        <button class="nav_up" type="submit">Up</button>
+                        <button class="nav_action" type="submit">Action</button>
+                        <button class="nav_down" type="submit">Down</button>
+                        <div class="gblank"></div>
+                        <div class="slot3">Inv 3</div>
+                        <div class="gblank"></div>
                     </div>
-                    <div id="inv">
+                    <!--<div id="inv">
                         <h1>INV AREA</h1>
-                    </div>
+                    </div>-->
                 </div>    
             </div> 
         </a-scene>
