--- a/awake.html
+++ b/awake.html
@@ -27,7 +27,9 @@
                     <div class="grid-compass">
                         <!--First row-->
                         <div class="gblank"></div> <!--1-->
-                        <button class="nav_nw" type="submit">NW</button>
+                        <div class="compasscol1">
+                            <button class="nav_nw" type="submit">NW</button>
+                        </div>
                         <button class="nav_n" type="submit">N</button>
                         <button class="nav_ne" type="submit">NE</button>
                         <div class="gblank"></div> <!--5-->
@@ -35,7 +37,9 @@
                         <div class="gblank"></div> <!--9-->
                         <!--Second row-->
                         <div class="gblank"></div>
-                        <button class="nav_w" type="submit">W</button>
+                        <div class="compasscol1">
+                            <button class="nav_w" type="submit">W</button>
+                        </div> 
                         <button class="nav_l" type="submit">L</button>
                         <button class="nav_e" type="submit">E</button>
                         <div class="gblank"></div>
@@ -43,7 +47,9 @@
                         <div class="gblank"></div>
                         <!--Third row-->
                         <div class="gblank"></div>
-                        <button class="nav_sw" type="submit">SW</button>
+                        <div class="compasscol1">
+                            <button class="nav_sw" type="submit">SW</button>
+                        </div>
                         <button class="nav_s" type="submit">S</button> 
                         <button class="nav_se" type="submit">SE</button>
                         <div class="gblank"></div>
@@ -57,7 +63,9 @@
                         <div class="gblank"></div>
                         <!--Fifth row-->
                         <div class="gblank"></div>
-                        <button class="nav_up" type="submit">Up</button>
+                        <div class="compasscol1">
+                            <button class="nav_up" type="submit">Up</button>
+                        </div>
                         <button class="nav_action" type="submit">Action</button>
                         <button class="nav_down" type="submit">Down</button>
                         <div class="gblank"></div>
