change to compass

--- a/awake.html
+++ b/awake.html
@@ -26,55 +26,21 @@
                     <!--</div>-->
                     <div class="grid-compass">
                         <!--First row-->
-                        <div class="gblank"></div> <!--1-->
-                        <div class="compasscol1">
-                            <button class="nav_nw" type="submit">NW</button>
-                        </div>
-                        <button class="nav_n" type="submit">N</button>
-                        <button class="nav_ne" type="submit">NE</button>
-                        <div class="gblank"></div> <!--5-->
-                        <div class="invtitle">Inventory</div> <!--6-8-->
-                        <div class="gblank"></div> <!--9-->
+                        <button class="compassbtn" type="submit">NW</button>
+                        <button class="compassbtn" type="submit">N</button>
+                        <button class="compassbtn" type="submit">NE</button>
+                        <button class="compassbtn" type="submit">UP</button>
                         <!--Second row-->
-                        <div class="gblank"></div>
-                        <div class="compasscol1">
-                            <button class="nav_w" type="submit">W</button>
-                        </div> 
-                        <button class="nav_l" type="submit">L</button>
-                        <button class="nav_e" type="submit">E</button>
-                        <div class="gblank"></div>
-                        <div class="invblank"></div> <!--6-8-->
-                        <div class="gblank"></div>
+                        <button class="compassbtn" type="submit">W</button>
+                        <button class="compassbtn" type="submit">INV</button>
+                        <button class="compassbtn" type="submit">E</button>
+                        <button class="compassbtn" type="submit">BACK</button>
                         <!--Third row-->
-                        <div class="gblank"></div>
-                        <div class="compasscol1">
-                            <button class="nav_sw" type="submit">SW</button>
-                        </div>
-                        <button class="nav_s" type="submit">S</button> 
-                        <button class="nav_se" type="submit">SE</button>
-                        <div class="gblank"></div>
-                        <div class="slot1">Inv 1</div>
-                        <div class="gblank"></div>
-                        <!--Forth row-->
-                        <div class="gblank"></div>
-                        <div class="compassblank"></div> <!--2-4-->
-                        <div class="gblank"></div>
-                        <div class="slot2">Inv 2</div>
-                        <div class="gblank"></div>
-                        <!--Fifth row-->
-                        <div class="gblank"></div>
-                        <div class="compasscol1">
-                            <button class="nav_up" type="submit">Up</button>
-                        </div>
-                        <button class="nav_action" type="submit">Action</button>
-                        <button class="nav_down" type="submit">Down</button>
-                        <div class="gblank"></div>
-                        <div class="slot3">Inv 3</div>
-                        <div class="gblank"></div>
+                        <button class="compassbtn" type="submit">SW</button>
+                        <button class="compassbtn" type="submit">S</button> 
+                        <button class="compassbtn" type="submit">SE</button>
+                        <button class="compassbtn" type="submit">DOWN</button> 
                     </div>
-                    <!--<div id="inv">
-                        <h1>INV AREA</h1>
-                    </div>-->
                 </div>    
             </div> 
         </a-scene>
