--- a/awake.html
+++ b/awake.html
@@ -17,30 +17,30 @@
                 <div class="content">
                     <!--<div id="menu" style="position: fixed; top: 0; left:0; right: 0; background: rgba(30, 30, 30, 0.2); padding: 10px">-->
                 </div>
-                <div class="descriptive">
-                    <h4>Description of the scene goes in here.  This should give links to possible options and information about what can be seen and hints as to how to interact with the environment.</h4>
-                </div>
                 <div class="base">
-                    <!--<div id="blank">-->
-                        <!--this space intentionally left blank ;)-->
-                    <!--</div>-->
                     <div class="grid-compass">
                         <!--First row-->
-                        <button class="compassbtn" type="submit">NW</button>
-                        <button class="compassbtn" type="submit">N</button>
-                        <button class="compassbtn" type="submit">NE</button>
-                        <button class="compassbtn" type="submit">UP</button>
+                        <button class="compassbtn" id="NW" type="submit">NW</button>
+                        <button class="compassbtn" id="N" type="submit">N</button>
+                        <button class="compassbtn" id="NE" type="submit">NE</button>
+                        <button class="compassbtn" id="UP" type="submit">UP</button>
                         <!--Second row-->
-                        <button class="compassbtn" type="submit">W</button>
-                        <button class="compassbtn" type="submit">INV</button>
-                        <button class="compassbtn" type="submit">E</button>
-                        <button class="compassbtn" type="submit">BACK</button>
+                        <button class="compassbtn" id="W" type="submit">W</button>
+                        <button class="compassbtn" id="INV" type="submit">INV</button>
+                        <button class="compassbtn" id="E" type="submit">E</button>
+                        <button class="compassbtn" id="BACK" type="submit">BACK</button>
                         <!--Third row-->
-                        <button class="compassbtn" type="submit">SW</button>
-                        <button class="compassbtn" type="submit">S</button> 
-                        <button class="compassbtn" type="submit">SE</button>
-                        <button class="compassbtn" type="submit">DOWN</button> 
+                        <button class="compassbtn" id="SW" type="submit">SW</button>
+                        <button class="compassbtn" id="S" type="submit">S</button> 
+                        <button class="compassbtn" id="SE" type="submit">SE</button>
+                        <button class="compassbtn" id="DOWN" type="submit">DOWN</button> 
                     </div>
+                    <div class="descriptive">
+                        Description of the scene goes in here.  This should give links to possible options and information about what can be seen and hints as to how to interact with the environment.
+                    </div>
+                    <div class="inventory">
+                        Description of the scene goes in here.  This should give links to possible options and information about what can be seen and hints as to how to interact with the environment.
+                    </div>                    
                 </div>    
             </div> 
         </a-scene>
