Need to remove fixed px

--- a/awake.html
+++ b/awake.html
@@ -35,8 +35,13 @@
                         <button class="compassbtn" id="SE" type="submit">SE</button>
                         <button class="compassbtn" id="DOWN" type="submit">DOWN</button> 
                     </div>
-                    <div class="descriptive">
-                        Description of the scene goes in here.  This should give links to possible options and information about what can be seen and hints as to how to interact with the environment.
+                    <div class="descriptive" id="info">
+                        <div class="descriptive" id="title">
+                            Lecture seats
+                        </div>
+                        <div class="descriptive">
+                            Description of the scene goes in here.  This should give links to possible options and information about what can be seen and hints as to how to interact with the environment.
+                        </div>
                     </div>
                     <div class="inventory">
                         Description of the scene goes in here.  This should give links to possible options and information about what can be seen and hints as to how to interact with the environment.
