Changed starting awake image

--- a/awake.html
+++ b/awake.html
@@ -8,7 +8,7 @@
   <body>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
-            <a-sky src="./images/R0011479_20240123183214.JPG" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/r0011539_20240326143632.jpg" rotation="0 -90 0"></a-sky>
 
             <div class="flexb">
                 <div class="menu">        
