--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!--<link rel="prefetch" href="(./images/R0011479_20240123183214.JPG)">-->
     <style>
         body, html{
+            background-color:#000;
             height: 100%;
             margin: 0;
         } 
