--- a/awake.html
+++ b/awake.html
@@ -3,9 +3,10 @@
   <head>
     <title>deadLINE</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script scr="logic.js"></script>
     <link rel="stylesheet" href="360style.css">
   </head>
-  <body>
+  <body onload = "welcomeFunction()" >
     <three60>
         <a-scene xr-mode-ui="enabled: false">
             <a-sky src="./images/r0011539_20240326143632.jpg" rotation="0 -90 0"></a-sky>
