--- a/awake.html
+++ b/awake.html
@@ -40,7 +40,7 @@
                         <div class="descriptive" id="title">
                             Lecture seats
                         </div>
-                        <div class="descriptive">
+                        c<div class="descriptive" id="locdescription">
                             Description of the scene goes in here.  This should give links to possible options and information about what can be seen and hints as to how to interact with the environment.
                         </div>
                     </div>
