--- a/lectureUp.html
+++ b/lectureUp.html
@@ -6,10 +6,10 @@
     <script scr="logic.js"></script>
     <link rel="stylesheet" href="360style.css">
   </head>
-  <body onload = "welcomeFunction()" >
+  <body>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
-            <a-sky src="./images/awakecarpet.jpg" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/lectureUp.jpg" rotation="0 -90 0"></a-sky>
 
             <div class="flexb">
                 <div class="menu">        
@@ -41,7 +41,7 @@
                             Lecture seats
                         </div>
                         c<div class="descriptive" id="description">
-                            Opening your eyes you find yourself lying on the floor of the dimly lit lecture theatre.  You have no idea what time it is or how long you have left to submit your coursework. Go back to <a href="index.html">sleep</a> or get <a href="lectureUp.html">up</a>
+                            Everyone has gone, your laptop has gone, silence.  Standing in the semi dark, the main lights off it is hard to see properly but the stairs go <a href="index.html">up</a> and <a href="index.html">down</a> or you could go <a href="index.html">east</a> to the other row of seats.
                         </div>
                     </div>
                     <div class="inventory">
