css a href colour

--- a/lectureUp.html
+++ b/lectureUp.html
@@ -27,9 +27,9 @@
                         <button class="compassbtn" id="UP" type="submit">UP</button>
                         <!--Second row-->
                         <button class="compassbtn" id="W" type="submit">W</button>
-                        <button class="compassbtn" id="INV" type="submit">INV</button>
-                        <button class="compassbtn" id="E" type="submit">E</button>
                         <button class="compassbtn" id="BACK" type="submit">BACK</button>
+                        <button class="compassbtn" id="E" type="submit">E</button>
+                        <button class="compassbtn" id="SEARCH" type="submit">SEARCH</button>
                         <!--Third row-->
                         <button class="compassbtn" id="SW" type="submit">SW</button>
                         <button class="compassbtn" id="S" type="submit">S</button> 
@@ -41,7 +41,7 @@
                             Lecture seats
                         </div>
                         c<div class="descriptive" id="description">
-                            Everyone has gone, your laptop has gone, silence.  Standing in the semi dark, the main lights off it is hard to see properly but the stairs go <a href="index.html">up</a> and <a href="index.html">down</a> or you could go <a href="index.html">east</a> to the other row of seats.
+                            Everyone has gone, your laptop has gone, silence.  Standing in the semi dark, the main lights off, it is hard to see properly but the stairs go <a href="index.html">up</a> and <a href="index.html">down</a> or you could go <a href="index.html">east</a> to the other row of seats.  The side lighting makes everything look a bit eerie, especially the massive air conditioning ducts above your head.
                         </div>
                     </div>
                     <div class="inventory">
