--- a/awake.html
+++ b/awake.html
@@ -40,7 +40,7 @@
                         <div class="descriptive" id="title">
                             Lecture seats
                         </div>
-                        c<div class="descriptive" id="description">
+                        <div class="descriptive" id="description">
                             Opening your eyes you find yourself lying on the floor of the dimly lit lecture theatre.  You have no idea what time it is or how long you have left to submit your coursework. Go back to <a href="index.html">sleep</a> or get <a href="lectureUp.html">up</a>
                         </div>
                     </div>
