--- a/lectureUp.html
+++ b/lectureUp.html
@@ -40,7 +40,7 @@
                         <div class="descriptive" id="title">
                             Lecture seats
                         </div>
-                        c<div class="descriptive" id="description">
+                        <div class="descriptive" id="description">
                             Everyone has gone, your laptop has gone, silence.  Standing in the semi dark, the main lights off, it is hard to see properly but the stairs go <a href="index.html">up</a> and <a href="index.html">down</a> or you could go <a href="index.html">east</a> to the other row of seats.  The side lighting makes everything look a bit eerie, especially the massive air conditioning ducts above your head.
                         </div>
                     </div>
