--- a/awake.html
+++ b/awake.html
@@ -3,10 +3,14 @@
   <head>
     <title>deadLINE</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <!--<script>function showAlert(){
+        var urlsub = window.location.href;
+        alert(urlsub.substring(urlsub.lastIndexOf('/')+1));
+    }</script>-->
     <link rel="stylesheet" href="360style.css">
   </head>
-  <body>
-    <script scr="logic.js"></script>
+  <!--<body onload="showAlert()">-->
+  <body>    
     <three60>
         <a-scene xr-mode-ui="enabled: false">
             <a-sky src="./images/awakecarpet.jpg" rotation="0 -90 0"></a-sky>
@@ -21,27 +25,27 @@
                 <div class="base">
                     <div class="grid-compass">
                         <!--First row-->
-                        <button class="compassbtn" id="NW" type="submit">NW</button>
-                        <button class="compassbtn" id="N" type="submit">N</button>
-                        <button class="compassbtn" id="NE" type="submit">NE</button>
-                        <button class="compassbtn" id="UP" type="submit">UP</button>
+                        <button id="NW" class="compassbtn" type="submit">NW</button>
+                        <button id="N" class="compassbtn"  type="submit">N</button>
+                        <button id="NE" class="compassbtn" type="submit">NE</button>
+                        <button id="UP" class="compassbtn">UP</button>
                         <!--Second row-->
-                        <button class="compassbtn" id="W" type="submit">W</button>
-                        <button class="compassbtn" id="INV" type="submit">INV</button>
-                        <button class="compassbtn" id="E" type="submit">E</button>
-                        <button class="compassbtn" id="BACK" type="submit">BACK</button>
+                        <button id="W" class="compassbtn"type="submit">W</button>
+                        <button id="INV" class="compassbtn" type="submit">INV</button>
+                        <button id="E" class="compassbtn" type="submit">E</button>
+                        <button id="BACK" class="compassbtn" type="submit">BACK</button>
                         <!--Third row-->
-                        <button class="compassbtn" id="SW" type="submit">SW</button>
-                        <button class="compassbtn" id="S" type="submit">S</button> 
-                        <button class="compassbtn" id="SE" type="submit">SE</button>
-                        <button class="compassbtn" id="DOWN" type="submit">DOWN</button> 
+                        <button id="SW" class="compassbtn" type="submit">SW</button>
+                        <button id="S" class="compassbtn" type="submit">S</button> 
+                        <button id="SE" class="compassbtn" type="submit">SE</button>
+                        <button id="DOWN" class="compassbtn" type="submit">DOWN</button> 
                     </div>
                     <div class="descriptive" id="info">
                         <div class="descriptive" id="title">
                             Lecture seats
                         </div>
                         <div class="descriptive" id="description">
-                            Opening your eyes you find yourself lying on the floor of the dimly lit lecture theatre.  You have no idea what time it is or how long you have left to submit your coursework. Go back to <a href="index.html">sleep</a> or get <a href="lectureUp.html">up</a>
+                            Opening your eyes you find yourself lying on the floor of the dimly lit lecture theatre.  You have no idea what time it is or how long you have left to submit your coursework. Go back to <a href="index.html">sleep</a> or get <a href="UP">up</a>
                         </div>
                     </div>
                     <div class="inventory">
@@ -50,6 +54,7 @@
                 </div>    
             </div> 
         </a-scene>
-    </three60>      
+    </three60>  
+    <script src="logic.js"></script>    
   </body>
 </html>
