--- a/awake.html
+++ b/awake.html
@@ -3,13 +3,8 @@
   <head>
     <title>deadLINE</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    <!--<script>function showAlert(){
-        var urlsub = window.location.href;
-        alert(urlsub.substring(urlsub.lastIndexOf('/')+1));
-    }</script>-->
     <link rel="stylesheet" href="360style.css">
   </head>
-  <!--<body onload="showAlert()">-->
   <body>    
     <three60>
         <a-scene xr-mode-ui="enabled: false">
@@ -20,32 +15,32 @@
                     <h3>Hamburger</h3>
                 </div>
                 <div class="content">
-                    <!--<div id="menu" style="position: fixed; top: 0; left:0; right: 0; background: rgba(30, 30, 30, 0.2); padding: 10px">-->
+                    <div><p id=""innervoice"></p></div>
                 </div>
                 <div class="base">
                     <div class="grid-compass">
                         <!--First row-->
-                        <button id="NW" class="compassbtn" type="submit">NW</button>
-                        <button id="N" class="compassbtn"  type="submit">N</button>
-                        <button id="NE" class="compassbtn" type="submit">NE</button>
+                        <button id="NW" class="compassbtn">NW</button>
+                        <button id="N" class="compassbtn">N</button>
+                        <button id="NE" class="compassbtn">NE</button>
                         <button id="UP" class="compassbtn">UP</button>
                         <!--Second row-->
-                        <button id="W" class="compassbtn"type="submit">W</button>
-                        <button id="INV" class="compassbtn" type="submit">INV</button>
-                        <button id="E" class="compassbtn" type="submit">E</button>
-                        <button id="BACK" class="compassbtn" type="submit">BACK</button>
+                        <button id="W" class="compassbtn">W</button>
+                        <button id="INV" class="compassbtn">INV</button>
+                        <button id="E" class="compassbtn">E</button>
+                        <button id="BACK" class="compassbtn">BACK</button>
                         <!--Third row-->
-                        <button id="SW" class="compassbtn" type="submit">SW</button>
-                        <button id="S" class="compassbtn" type="submit">S</button> 
-                        <button id="SE" class="compassbtn" type="submit">SE</button>
-                        <button id="DOWN" class="compassbtn" type="submit">DOWN</button> 
+                        <button id="SW" class="compassbtn">SW</button>
+                        <button id="S" class="compassbtn">S</button> 
+                        <button id="SE" class="compassbtn">SE</button>
+                        <button id="DOWN" class="compassbtn">DOWN</button> 
                     </div>
                     <div class="descriptive" id="info">
                         <div class="descriptive" id="title">
                             Lecture seats
                         </div>
                         <div class="descriptive" id="description">
-                            Opening your eyes you find yourself lying on the floor of the dimly lit lecture theatre.  You have no idea what time it is or how long you have left to submit your coursework. Go back to <a href="index.html">sleep</a> or get <a href="UP">up</a>
+                            Opening your eyes you find yourself lying on the floor of the dimly lit lecture theatre.  You have no idea what time it is or how long you have remaining to submit your coursework. Go back to <a href="index.html">sleep</a> or get <a href="lectureUp.html">up</a>
                         </div>
                     </div>
                     <div class="inventory">
