--- a/lectureUp.html
+++ b/lectureUp.html
@@ -41,7 +41,7 @@
                             Lecture seats
                         </div>
                         <div class="descriptive" id="description">
-                            Everyone has gone, your laptop has gone, silence.  Standing in the semi dark, the main lights off, it is hard to see properly but the stairs go <a href="index.html">up</a> and <a href="index.html">down</a> or you could go <a href="index.html">east</a> to the other row of seats.  The side lighting makes everything look a bit eerie, especially the massive air conditioning ducts above your head.
+                            Everyone has gone, your laptop has gone, silence.  Why did they leave me?  Standing in the semi dark, the main lights off, it is hard to see properly but the stairs go <a href="index.html">up</a> and <a href="index.html">down</a> or you could go <a href="index.html">east</a> to the other row of seats.  The side lighting makes everything look a bit eerie, especially the massive air conditioning ducts above your head.
                         </div>
                     </div>
                     <div class="inventory">
