a href button activate
Add a listener to intercept the click of an a href and activate the button that has that function.  This means the description links and the compass buttons are running the same navigation code.

--- a/awake.html
+++ b/awake.html
@@ -40,7 +40,9 @@
                             Lecture seats
                         </div>
                         <div class="descriptive" id="description">
-                            Opening your eyes you find yourself lying on the floor of the dimly lit lecture theatre.  You have no idea what time it is or how long you have remaining to submit your coursework. Go back to <a href="index.html">sleep</a> or get <a href="lectureUp.html">up</a>
+                            Opening your eyes you find yourself lying on the floor of the dimly lit lecture theatre.  
+                            You have no idea what time it is or how long you have remaining to submit your coursework. 
+                            Go back to <a href="index.html">sleep</a> or get <a class="activateBtn" data-target="UP" href="#">up</a>
                         </div>
                     </div>
                     <div class="inventory">
