Stop text being selected
Added utility.js to disable text selection when the mouse is down and scrolling.
This was highlighting text when moving the 360 a-frame image.

--- a/awake.html
+++ b/awake.html
@@ -53,5 +53,6 @@
         </a-scene>
     </three60>  
     <script src="logic.js"></script>    
+    <script src="utility.js"></script>
   </body>
 </html>
