--- a/awake.html
+++ b/awake.html
@@ -15,7 +15,7 @@
                     <h3>Hamburger</h3>
                 </div>
                 <div class="content">
-                    <div><p id=""innervoice"></p></div>
+                    <div><p id="innervoice"></p></div>
                 </div>
                 <div class="base">
                     <div class="grid-compass">
