--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body>
-    <div class="backimg" onclick="location.href='awake.html';" style="cursor: pointer;">
+    <div class="backimg" onclick="location.href='lecture.html';" style="cursor: pointer;">
     </div>   
   </body>
 </html>
