--- a/lecture.html
+++ b/lecture.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <title>WebTech</title>
+    <link rel="stylesheet" href="360style.css">
 </head>
 <body>
-    <video id="lecture" controls="none">
+    <video id="lecture" autoplay="autoplay" loop="">
         <source src="video/lecture.mp4" type="video/mp4">
-        If you see this your browser does not support the video tag.
+        If you see this your browser does not support the video tag.  You will miss your deadLINE.
     </video>
     <script scr="utility.js" defer></script>
 </body>
