--- a/lecture.html
+++ b/lecture.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="360style.css">
 </head>
 <body>
-    <video id="lecture" autoplay="autoplay" loop="">
+    <video id="lecture" autoplay="autoplay">
         <source src="video/lecture.mp4" type="video/mp4">
         If you see this your browser does not support the video tag.  You will miss your deadLINE.
     </video>
